fix buttons section alignment

--- a/src/app/components/countries-list/countries-list.component.scss
+++ b/src/app/components/countries-list/countries-list.component.scss
@@ -34,4 +34,11 @@
 
         margin: 5px;
     }
+
+    ::ng-deep {
+        .mat-card-actions {
+            display: flex;
+            justify-content: flex-end;
+        }
+    }
 }
